<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/profile_photo"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/grey"
                app:civ_border_width="0.5dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Change Photo"
                android:id="@+id/changeProfilePhoto"
                android:layout_below="@+id/profile_photo"
                android:layout_centerHorizontal="true"
                android:textColor="@color/blue"
                android:textSize="16sp"/>



            <!-- username section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/changeProfilePhoto"
                android:layout_marginTop="40dp"
                android:id="@+id/relLayout1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/username"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="120dp"
                    android:background="@drawable/grey_border_bottom"
                    android:hint="@string/username"/>

            </RelativeLayout>


            <!-- display_name section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout1"
                android:id="@+id/relLayout2"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/display_name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/display_name"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="120dp"
                    android:background="@drawable/grey_border_bottom"
                    android:hint="@string/display_name"/>

            </RelativeLayout>

            <!-- description section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout2"
                android:id="@+id/relLayout3"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/description"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="120dp"
                    android:background="@drawable/grey_border_bottom"
                    android:hint="@string/description"/>

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="PRIVATE INFORMATION"
                android:layout_below="@id/relLayout3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/textPrivateInfo"/>


            <!-- email section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textPrivateInfo"
                android:id="@+id/relLayout4"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/email"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="120dp"
                    android:background="@drawable/grey_border_bottom"
                    android:hint="@string/email"/>

            </RelativeLayout>

            <!-- phone number section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout4"
                android:id="@+id/relLayout5"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/phone_number"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneNumber"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="120dp"
                    android:background="@drawable/grey_border_bottom"
                    android:hint="@string/phone_number"/>

            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>
</merge>